# 1.06.00 (52280) May 21, 2011
5/21/11 > added new translation credits features
# 1.05.01 (52208) May 19, 2011
# 1.05.00 (38025) Jan 11, 2010
1/11/10 public version for milestone "full redeploy, 2010 Q1"
# 1.04.01 (37375) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.04.00 (34093) Aug 13, 2009
8/13/09 production release
> many minor bug fixes
# 1.03.13 (34076) Aug 13, 2009
8/13/09 regression testing of production release candidate
8/13/09 #1753, turn off bonds on "Reset All"
8/13/09 #1752, reset clock and clear strip chart when "Clear container" is pressed
# 1.03.12 (34051) Aug 12, 2009
8/12/09 regression testing of production release candiate
# 1.03.11 (33960) Aug 10, 2009
> improve the behavior of all spinner controls
8/10/09 #1738, fix molecule count spinners
# 1.03.10 (33541) Jul 22, 2009
7/22/09 temporary fix for #1712, for Windows testing
# 1.03.09 (33517) Jul 21, 2009
7/21/09 #1741, display an error dialog if an invalid value is entered in initial conditions spinner
# 1.03.08 (33511) Jul 21, 2009
7/21/09 publish dev version to review change requests
7/21/09 #1712, make the "Begin/End Experiment" button appear to be more responsive
7/21/09 #1728, limit initial molecule counts to 100 of each type
# 1.03.07 (33495) Jul 20, 2009
7/20/09 publish dev version to review bug fixes
7/20/09 #1730, automatically reload the launcher when reaction type is changed
7/20/09 #1741, use spinners to set molecule counts for initial conditions
# 1.03.06 (33475) Jul 20, 2009
7/20/09 publish dev version to review many bug fixes
7/20/09 #1740, properly disabled spinners in "Rate Experiements" tab
> added a "Clear container" button to the "Many Collisions" tab
7/20/09 #1732, add a "Clear container" button to the "Many Collisions" tab
7/20/09 #1730, clear the model when the reaction type is changed (instead of doing Reset All)
7/20/09 #1710, #1711, clear the model when the initial temperature is changed (instead of doing nothing)