@@ -1,3 +1,4 @@
+2/19/13 #3511, use our own listener class in EventChannel instead of javax.swing.event.ChangeListener
 # 1.06.00 (52280) May 21, 2011
 5/21/11 > added new translation credits features
 # 1.05.01 (52208) May 19, 2011
